--- a/lab1/BortolatoAngela_Lab1.ipynb
+++ b/lab1/BortolatoAngela_Lab1.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -708,7 +708,7 @@
     "cat(\"Average trip duration excluded implausible data (in minutes):\", mean(data_excl[['tripduration']])/60)\n",
     "cat(\"\\nMedian trip duration excluded implausible data (in minutes):\", median(data_excl[['tripduration']])/60)\n",
     "\n",
-    "cat(\"\\nExcluded data (trip duration larger than 3 hours):\", sum(data$tripduration > (3 * 3600)))"
+    "cat(\"\\nExcluded data (trip duration larger than 3 hours):\", sum(data$tripduration > (3 * 3600)))   #also use FILTER"
    ]
   },
   {
@@ -1367,7 +1367,7 @@
    "outputs": [],
    "source": [
     "# For each event and for each 8×8 matrix, check for missing values in the dataset and handle them appropriately\n",
-    "pps_mat1_raw <- pps[, 1:64]\n",
+    "pps_mat1_raw <- pps[, 1:64]     #or we can do \"select()\"\n",
     "pps_mat2_raw <- pps[, 65:128]\n",
     "pps_mat1_raw <- na.omit(pps_mat1_raw)\n",
     "pps_mat2_raw <- na.omit(pps_mat2_raw)"
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -1384,12 +1384,13 @@
    "outputs": [],
    "source": [
     "# For each event and for each 8×8 matrix, determine the maximum and second maximum pixel values\n",
+    "# otherwise define a function \"event_summary\"\n",
     "\n",
     "pps_mat1 <- pps_mat1_raw %>% rowwise() %>% mutate(\n",
     "    max1 = max(c_across(1:64)),\n",
     "    argmax1 = which.max(c_across(1:64)),\n",
     "    max2 = sort(unique(c_across(1:64)), decreasing = TRUE)[2],\n",
-    "    argmax2 = which(c_across(1:64) == max2)[1] # Adjust to second max position\n",
+    "    argmax2 = which(c_across(1:64) == max2)[1] # Adjust to second max position OR use order\n",
     "  ) %>%\n",
     "  ungroup()"
    ]
