--- a/lab2/BortolatoAngela_Lab2.ipynb
+++ b/lab2/BortolatoAngela_Lab2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -28,7 +28,10 @@
     "ztb_cdf <- function(x, n, p) {\n",
     "    arr <- 1:x\n",
     " sum(sapply(arr, function(k) ztb_pdf(k, n, p)))\n",
-    " }"
+    " }\n",
+    "\n",
+    "\n",
+    "# dont forget to define for k=0!!!!"
    ]
   },
   {
